# gandalf-doe

./: LICENSE  README.md  mypy.ini  pyproject.toml  tox.ini
notebooks/: PredictiveCatalyticActivity-GP.ipynb  PredictiveCatalyticActivity.ipynb  demo.ipynb
src/gandalf_doe/: domain.py  experiment.py
src/gandalf_doe/acquisition/: EMOC.py
src/gandalf_doe/clustering/: initialization_cluster.py  pool.py  selection.py  utils.py
src/gandalf_doe/optimizer/: base.py  linesearch.py  rprop_gpy.py
test_data/: dataset.xlsx
tests/: test_domain.py  test_import.py  test_initialization.py  test_suggestion.py
